samples/_failures_safe/1761194770_8f9487_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1ef9cb34.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_1ef9cb34.c:160:17: error: expected expression at end of input
  160 |                 return
      |                 ^~~~~~
./samples/SAFE/__tmp_1ef9cb34.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1ef9cb34.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1ef9cb34.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1ef9cb34.c:160:17: error: expected declaration or statement at end of input
